# voodplaner

./: Cargo.toml  README.md
dge-generator/: Cargo.toml  README.md  dge-references.csv
dge-generator/src/: lib.rs  main.rs
infood-tags-generator/: Cargo.toml  README.md
infood-tags-generator/data/: PART1.UTF8.TXT  TAGREV__1_.csv  Tagname_new_April_2010-web__2_.csv
infood-tags-generator/src/: lib.rs  main.rs
infood-tags-generator/src/snapshots/: infood_tags_generator__tests__generate.snap  infood_tags_generator__tests__parse_cvs.snap  infood_tags_generator__tests__parse_parts.snap
usda-nutrients-generator/: Cargo.toml  README.md
usda-nutrients-generator/data/: FOOD_DES.txt
usda-nutrients-generator/src/: lib.rs  main.rs
voodplaner-core/: Cargo.toml  build.rs
voodplaner-core/src/: lib.rs
voodplaner-requirements/: Cargo.toml  README.md  build.rs  toformat.md
voodplaner-requirements/src/: lib.rs  main.rs
