[package]
name = "voodplaner-core"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
infood-tags-generator = {path = "../infood-tags-generator"}
