[package]
name = "voodplaner-requirements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voodplaner-core = {path = "../voodplaner-core"}

[build-dependencies]
dge-generator = {path = "../dge-generator"}
