[package]
name = "voodplaner-requirements"
version.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voodplaner-core = {path = "../voodplaner-core"}

[build-dependencies]
dge-generator = {path = "../dge-generator"}
